Fix upload progress bar z-index

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -315,6 +315,9 @@ ul.comma-list {
         margin-top: 10px;
         text-align: center;
     }
+    .dz-progress {
+        z-index : 10;
+    }
     .radio-option {
         background: #f5f5f5;
         border-radius: 2px;
